# fbz

./: .gitignore  CLAUDE.md  LICENSE  README.md
fbz-api/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml
fbz-api/docs/: database-partitioning-design.md  database-scale.md  deployment.md  plugin-development.md  plugin-system.md
fbz-api/docs/plans/: backend-execution-goal.md  external-music-source.md  media-recognition-design.md  media-type-taxonomy-design.md  metadata-scraper-design.md
fbz-api/examples/plugins/: first-party-notifier-templates.test.mjs
fbz-api/examples/plugins/_shared/: fbz-plugin-http.mjs  fbz-plugin-http.test.mjs
fbz-api/examples/plugins/http-marker-importer/: README.md  manifest.json  marker-fixture.json  server.mjs
fbz-api/examples/plugins/http-notification-bridge/: README.md  manifest.json  server.mjs
fbz-api/examples/plugins/telegram-notifier-template/: README.md  manifest.json  server.mjs
fbz-api/examples/plugins/wasi-scan-logger-template/: Cargo.toml  README.md  manifest.json
fbz-api/migrations/: 0001_initial.sql  0002_core_media.sql  0003_jobs_playback.sql  0004_indexes.sql  0005_plugins.sql  0006_plugin_execution.sql  0007_plugin_host_api.sql  0008_plugin_notifications.sql  0009_notification_delivery.sql  0010_notification_target_secrets.sql  0011_cron_scheduler.sql  0012_scheduled_task_runs.sql  0013_transcode_queue_leases.sql  0014_plugin_config_secrets.sql  0015_metadata_refresh.sql  0016_event_stream_mirror.sql  0017_plugin_host_token_permissions.sql  0018_plugin_host_api_calls.sql  0019_plugin_hook_events.sql  0020_plugin_package_lifecycle.sql  0021_scan_job_scale_indexes.sql  0022_scan_missing_tracking.sql  0023_media_probe_jobs.sql  0024_user_playstate_preferences.sql  0025_media_filter_indexes.sql  0026_item_metadata_filters.sql  0027_provider_id_filter_indexes.sql  0028_plugin_permission_uniqueness.sql  0029_plugin_host_library_items_index.sql  0030_plugin_host_api_call_budget_index.sql  0031_plugin_execution_stale_recovery_indexes.sql  0032_scheduled_task_run_cancel_status.sql  0033_device_capabilities.sql  0034_media_file_primary_covering_index.sql  0035_resume_playstate_covering_index.sql  0036_media_item_parent_type_index_sort.sql  0037_artwork_media_item_tag_order.sql  0038_scheduled_task_run_recent_index.sql  0039_notification_admin_recent_indexes.sql  0040_user_playstate_filter_covering_indexes.sql  (+54 more)
fbz-api/scripts/: dev-deps.ps1  dev-deps.test.ps1  dev.ps1  package-plugin.ps1  smoke-plugin-lifecycle.ps1  smoke-plugin-runtime.ps1  smoke-plugin-signature.test.ps1
fbz-api/src/: app.rs  config.rs  error.rs  jobs.rs  lib.rs  main.rs  media_types.rs  realtime.rs  state.rs  telemetry.rs
fbz-api/src/admin/: access.rs  mod.rs  repository.rs  routes.rs
fbz-api/src/auth/: bootstrap.rs  mod.rs  password.rs  repository.rs  service.rs  token.rs
fbz-api/src/cache/: mod.rs
fbz-api/src/compat/: mod.rs
fbz-api/src/db/: mod.rs
fbz-api/src/events/: mod.rs  repository.rs  stream.rs  worker.rs
fbz-api/src/media/: audio_tags.rs  mod.rs  photo.rs  probe.rs  repository.rs  tools.rs
fbz-api/src/metadata/: cache.rs  mod.rs  provider.rs  remote_search.rs  service.rs  settings.rs  worker.rs  write.rs
fbz-api/src/music/: dto.rs  mod.rs  routes.rs  service.rs
fbz-api/src/navigation/: access.rs  dto.rs  mod.rs  routes.rs  service.rs
fbz-api/src/notifications/: delivery.rs  mod.rs  secrets.rs  system.rs  target_config.rs  worker.rs
fbz-api/src/plugins/: execution.rs  hooks.rs  host.rs  manifest.rs  mod.rs  repository.rs  routes.rs  signing.rs  wasi.rs  worker.rs
fbz-api/src/recognition/: dict.rs  mod.rs  repository.rs  routes.rs  rules.rs  types.rs
fbz-api/src/scan/: service.rs  worker.rs
fbz-api/src/scheduler/: mod.rs  repository.rs  service.rs  worker.rs
fbz-api/src/settings/: mod.rs  repository.rs
fbz-api/src/setup/: mod.rs  routes.rs  service.rs
fbz-api/src/text/: mod.rs  pinyin.rs
fbz-api/src/transcode/: cleanup.rs  mod.rs  planner.rs  repository.rs  service.rs  worker.rs
fbz-api/src/users/: repository.rs  routes.rs
fbz-api/tests/: media_recognition_smoke.rs
(+199 files in other folders)
