[package]
name = "fbz-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.8"
bytes = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
rand = "0.8"
redis = { version = "0.32", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.7", features = ["cors", "request-id", "trace", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wasmtime = { version = "45.0.2", default-features = false, features = ["async", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "45.0.2", default-features = false, features = ["p1"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
wat = "1"
